Added more interesting features to the code.

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </nav>
         </div>
 
-        <div class="d-header">
+        <div class="abt-d-header">
             <a href="index.html"><img src="./images/AFRO MEETS-1.png" alt="afro meet logo" class="d-img-1"></a>
             <nav class="d-nav">
                 <ul class="d-list">
@@ -54,37 +54,47 @@
             <h1 class="d-h-tet">RA Campaign</h1>
         </div>
 
-        <div class="abt-into">
-            <h2 class="abt-topic">RnB and AFRO-BEAT: <br> Uniting the Dancefloor 2023</h2>
-        </div>
-
-        <div class="abt-explain">
-            <div class="exp">
-                <h2 class="abt-explaination">The concerts brings together a community of people from different culture,
-                    race and ethnicity who comprise the entertainment industry in a different country every two years.
-                    Next year, we hope to expand our invitation to the carribeans including Asians and Jamaica.
-                </h2>
-
-                <h2 class="abt2-explaination">The concerts brings together a community of people from different culture,
-                    race and ethnicity who comprise the entertainment industry in a different country every two
-                    years.<br>Next year, we hope to expand our invitation list including organizations and individuals
-                    who want to
-                    work with us on shared projects that advances the cause of afro-pop, free culture and knowledge.
-                    <br> So if you are active and engaged in the worlds of open content and music - Producers, Music
-                    Directors, Music Promoters, D.J, gallaries, museums, archieves, governments and foundations,
-                    activists, and Content Creatives - we hope you'll consider joining us this year to build a stronger,
-                    more vibrant free society together.
-                </h2>
+        <div class="abt-bg">
+            <div class="abt-into">
+                <h2 class="abt-topic">RnB and AFRO-BEAT: <br> Uniting the Dancefloor 2023</h2>
             </div>
-        </div>
+            <div class="abt-explain">
+                <div class="exp">
+                    <h2 class="abt-explaination">The concerts brings together a community of people from different
+                        culture,
+                        race and ethnicity who comprise the entertainment industry in a different country every two
+                        years.
+                        Next year, we hope to expand our invitation to the carribeans including Asians and Jamaica.
+                    </h2>
 
-        <div class="cont">
-            <h3 class="email">Please contact us per Email for any further questions <br> about RnB meets Afro concert
-            </h3>
-            <h3 class="email2">Please contact us per Email for any further questions about RnB meets Afro concert 2023!
-            </h3>
-            <p class="gmail"><a href="mailto:unorjikingsley@gmail.com " class="g-mail">unorjikingsley@gmail.com</a>
-            </p>
+                    <h2 class="abt2-explaination">The concerts brings together a community of people from different
+                        culture,
+                        race and ethnicity who comprise the entertainment industry in a different country every two
+                        years.<br>Next year, we hope to expand our invitation list including organizations and
+                        individuals
+                        who want to
+                        work with us on shared projects that advances the cause of afro-pop, free culture and
+                        knowledge.
+                        <br> So if you are active and engaged in the worlds of open content and music - Producers,
+                        Music
+                        Directors, Music Promoters, D.J, gallaries, museums, archieves, governments and foundations,
+                        activists, and Content Creatives - we hope you'll consider joining us this year to build a
+                        stronger,
+                        more vibrant free society together.
+                    </h2>
+                </div>
+            </div>
+
+            <div class="cont">
+                <h3 class="email">Please contact us per Email for any further questions <br> about RnB meets Afro
+                    concert
+                </h3>
+                <h3 class="email2">Please contact us per Email for any further questions about RnB meets Afro concert
+                    2023!
+                </h3>
+                <p class="gmail"><a href="mailto:unorjikingsley@gmail.com " class="g-mail">unorjikingsley@gmail.com</a>
+                </p>
+            </div>
         </div>
     </section>
 
