--- a/index.html
+++ b/index.html
@@ -54,20 +54,22 @@
             <h1 class="d-h-tet">RA Campaign</h1>
         </div>
 
-        <div class="into">
-            <h1 class="hello">"Hello! Sharing world"</h1>
-            <h2 class="topic">RnB and AFRO-BEAT: Uniting the Dancefloor 2023</h2>
-        </div>
+        <div class="bg">
+            <div class="into">
+                <h1 class="hello">"Hello! Sharing world"</h1>
+                <h2 class="topic">RnB and AFRO-BEAT: Uniting the Dancefloor 2023</h2>
+            </div>
 
-        <div class="explain">
-            <h2 class="explaination">A joyful celeberation believing in the value of openess, sharing, culture, and
-                creating a positive change with people
-                from Europe and Africa is taking place in December, in Nigeria.</h2>
-        </div>
+            <div class="explain">
+                <h2 class="explaination">A joyful celeberation believing in the value of openess, sharing, culture, and
+                    creating a positive change with people
+                    from Europe and Africa is taking place in December, in Nigeria.</h2>
+            </div>
 
-        <div class="time">
-            <h2 class="date">2023.12.24(THUR) ~ 25(FRI)</h2>
-            <P class="venue">The Nigerian National Museum, National Staduim and more</P>
+            <div class="time">
+                <h2 class="date">2023.12.24(THUR) ~ 25(FRI)</h2>
+                <P class="venue">The Nigerian National Museum, National Staduim and more</P>
+            </div>
         </div>
     </section>
 
