Made changes to JS to include a show more button in the speaker section

--- a/index.html
+++ b/index.html
@@ -117,9 +117,11 @@
     </section>
 
     <section class="speak" id="speak">
-        <div class="guestscontainer">
+        <div class="guestscontainer"></div>
+    </section>
 
-        </div>
+    <section class="bs-speak" id="bs-speak">
+        <div class="bs-guestscontainer"></div>
     </section>
 
     <section class="spon" id="spon">
